# smus-migration-utility-sample

./: .gitignore  README.md  migrate.sh  nuke.sh  pyproject.toml  seed.sh
_lib/: common.sh
cfn/: master-stack.yaml  params.json.template
cfn/child-stacks/: sus-blueprints-stack.yaml  sus-domain-stack.yaml  sus-lambda-build-stack.yaml  sus-policy-grant-stack.yaml  sus-project-profiles-stack.yaml  sus-project-stack.yaml
docs/: mwaa-dag-cicd-pipeline-terraform.md  mwaa-dag-cicd-pipeline.md  mwaa-workflow-env-patches.md
migration_tool/: __main__.py  cli.py  config.py  errors.py  logger.py  mcp_docs.py  prompts.py  redact.py  reports.py  runner.py  state.py  steps_registry.py
migration_tool/tools/: connection_rewrite.py  glue_to_smus.py  notebook_gen.py
scripts/: add-glue-databases.sh  migrate.sh  nuke.sh  seed.sh  smus-setup.sh
seed/: README.md  provision.sh  seed.config.json.example  seed.state.json.example  teardown.sh
seed/_lib/: common.sh
seed/cloudwatch/: README.md  create.sh  teardown.sh
seed/data-gen/: README.md  create.sh  teardown.sh
seed/firehose/: README.md  create.sh  teardown.sh
seed/glue/: README.md  create.sh  teardown.sh
seed/kinesis/: README.md  create.sh  teardown.sh
seed/lambda/: README.md  create.sh  teardown.sh
seed/msk/: README.md  create.sh  teardown.sh
seed/mwaa/: README.md  create.sh  teardown.sh
seed/network/: README.md  create.sh  teardown.sh
seed/rds/: README.md  create.sh  teardown.sh
seed/sns/: README.md  create.sh  teardown.sh
steps/01_create-smus-domain/: README.md  run.sh
steps/02_portability/: README.md  (+1 more)
(+60 files in other folders)
