[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "migration-tool"
version = "0.1.0"
description = "SageMaker Migration Tool — hybrid Python orchestrator + bash step scripts for migrating AWS resources into SageMaker Unified Studio (SMUS)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml >= 6.0",
    "jsonschema >= 4.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "hypothesis >= 6.100",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["migration_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

# Hypothesis profile configuration.
#
# Hypothesis itself does NOT read pyproject.toml directly; profiles must be
# registered via `hypothesis.settings.register_profile(...)` from a Python
# module that is imported before tests run. The `tests/conftest.py` file
# (added in a later task) is responsible for registering and loading this
# profile so the values below take effect during test runs.
#
# Target profile values:
#   max_examples = 200
#   deadline     = None
#
# The `[tool.hypothesis]` table below is included to future-proof the
# configuration: should Hypothesis (or a plugin) gain native pyproject.toml
# support, the same values are already declared here. Today it is read by
# `tests/conftest.py` as a fallback source of truth.
[tool.hypothesis]
max_examples = 200
deadline = "none"
